# portfolio-mgmt-sys

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
data/: appl.json
src/: main.py
src/instruments/: base.py  bond.py  equity.py  factory.py
src/market_data/: manager.py
src/portfolio/: builder.py  portfolio.py
src/portfolio/strategies/: mean_reversion.py
tests/test_instruments/: test_equity.py
tests/test_market_data/: test_manager.py
